deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-app-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ip-app
  template:
    metadata:
      labels:
        app: ip-app
    spec:
      containers:
      - name: ipapp
        image: harshajain/ip_asadasdpp:latest
        ports:
        - containerPort: 8080
