svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cip-ipapp
spec:
  type: NodePort
  selector:
    app: ip-appa
  ports:
  - name: http
    port: 30002
    targetPort: 8080
    nodePort: 30004
